<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboSpiceDownLoad</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_url">add url</string>
    <string name="button_url">OK</string>
    <string name="starting">starting</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="goon">go on</string>
    <string name="start_state">0%</string>
    <string name="pending">pending</string>
    <string name="wrong_url">your url is wrong!</string>
    <string name="tips_already_have_this_task">the task is in the DownLoadTask list</string>
    <string name="taskinfo_name">TaskName:</string>
    <string name="taskinfo_content_length">ContentLength:</string>
    <string name="taskinfo_downloaded_content_length">DownLoaded:</string>
    <string name="taskinfo_progress">Progress:</string>
    <string name="taskinfo_state">State:</string>
    <string name="task_report">%1$s %2$s is downloading</string>
    <string name="restart">restart</string>
    <string name="pausing">pausing</string>
    <string name="taskinfo_location">Location</string>
    <string name="dialog_select_type">select_type</string>
    <string name="dialog_type_text">text</string>
    <string name="dialog_type_audio">audio</string>
    <string name="dialog_type_video">video</string>
    <string name="dialog_type_image">image</string>
    <string name="openfile">open</string>
    <string name="dialog_type_html">html</string>
    <string name="taskinfo_type">Type:</string>
    <string name="delete_task">delete</string>
    <string name="action_downloaded">downloaded</string>
    <string name="confirm_delete_text">Are you sure to delete %1$s %2$s?</string>
    <string name="notice">notice:</string>
    <string name="delete_file">delete file</string>
    <string name="delete_confirm">delete</string>
    <string name="delete_cancel">cancel</string>
    <string name="no_task">no task</string>
    <string name="copy_task">copy</string>
    <string name="operation_delete">delete</string>
    <string name="operation_copy">copy</string>
    <string name="operation_send">share</string>
    <string name="operation_cancel">cancel</string>
    <string name="operation_copy_path">copy path</string>
    <string name="filenotexist">File not existed</string>
    <string name="failure">Failure</string>
    <string name="pauseall">pauseall</string>


</resources>
