<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="2">
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/taskinfo_name"
                android:padding="3dip"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_name"
                android:padding="3dip"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/taskinfo_type"
                android:padding="3dip"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_type"
                android:padding="3dip"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/taskinfo_content_length"
                android:padding="3dip"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_content_length"
                android:padding="3dip"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/taskinfo_downloaded_content_length"
                android:padding="3dip"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_downloaded"
                android:padding="3dip"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
       <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/taskinfo_location"
                android:padding="3dip"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_location"
                android:padding="3dip"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/taskinfo_state"
                android:padding="3dip"
                android:gravity="right"
                style="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/information_state"
                android:padding="3dip"
                style="?android:attr/textAppearanceSmall" />
        </TableRow>
    </TableLayout>
</ScrollView>