<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:layout_margin="12dp"
        android:textSize="26sp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/delete_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"

        android:layout_gravity="center_horizontal"
        android:textSize="25sp"/>
    <CheckBox android:id="@+id/is_file_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/delete_file"
        android:textSize="25sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delete_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_confirm"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>
        <Button
            android:id="@+id/delete_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_cancel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            />

        </LinearLayout>


</LinearLayout>