<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="4dp"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/background_activated"
    >
    <ImageView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/img_file_icon"
        android:src="@drawable/robospice_logo"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:id="@+id/textview_task_name"
            android:singleLine="true"
            android:ellipsize="marquee" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/progressbar_download"
            style="?android:attr/progressBarStyleHorizontal"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/textview_task_total_size"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:text="@string/pending"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/textview_task_percent"
                android:layout_marginRight="5dp"
                android:layout_alignParentRight="true"
                android:text="@string/start_state"
                />
            </RelativeLayout>
        </LinearLayout>
    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:id="@+id/btn_ctl_state"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textSize="12sp"
        android:focusable="false"
        android:layout_marginRight="10dp"/>
</LinearLayout>